# gdm_framework

./: LICENSE  README.md
examples/dx11/01_normal_map/: CMakeLists.txt  normal_map.cc
examples/ecs/01_cubes/: CMakeLists.txt  enemy.ecs.h  input.ecs.h  player.ecs.h  stat.ecs.h  transform.ecs.h
examples/vk/02_deferred/: CMakeLists.txt  deferred.cc  helpers.cc  helpers.h  main.cc  scene.cc  scene.h  scene_manager.cc  scene_manager.h  scene_manager.inl
framework/data/: CMakeLists.txt  abstract_image.cc  abstract_image.h  abstract_image.inl  bmp_loader.cc  bmp_loader.h  cfg_loader.cc  cfg_loader.h  cfg_loader.inl  data_factory.cc  data_factory.h  data_factory.inl  data_storage.h  data_storage.inl  helpers.cc  helpers.h  image_factory.cc  image_factory.h  image_helpers.cc  image_helpers.h  material_factory.cc  material_factory.h  mesh_factory.cc  mesh_factory.h  mesh_factory.inl  model_factory.cc  model_factory.h  model_helpers.cc  model_helpers.h  model_loader.cc  model_loader.h  model_loader.inl  obj_loader.h  ply_loader.cc  ply_loader.h  png_loader.cc  png_loader.h  texture_factory.cc  texture_factory.h  tga_loader.cc  (+1 more)
framework/data/ut/: CMakeLists.txt  data_ut.cc
framework/ecs/: .todo  CMakeLists.txt  component.h  core.h  event.h  helpers.h  manager.cc  manager.h  manager.inl  system.cc  system.h  system.inl
framework/ecs/ut/: CMakeLists.txt  ecs_ut.cc
framework/engine/: CMakeLists.txt  camera_eul.cc  camera_eul.h  cfg_dispatcher.cc  cfg_dispatcher.h  debug_draw.cc  debug_draw.h  defines.h  gpu_streamer.cc  gpu_streamer.h  gui_manager.cc  gui_manager.h
framework/factory/: CMakeLists.txt  buffer_factory.h  data_factory.h  data_factory.inl  image_factory.cc  image_factory.h  material_factory.cc  material_factory.h  mesh_factory.cc  mesh_factory.inl  model_factory.cc  model_factory.h  texture_factory.cc  texture_factory.h
framework/factory/ut/: data_ut.cc
framework/math/: CMakeLists.txt  aabb.h  bounding_box.h  general.h  intersection.cc  intersection.h  line2.cc  line2.h  line3.cc  line3.h  matrix.h  obb.h  plane3.h  polygon2.cc  polygon2.h  segment2.cc  segment2.h  sphere.h  vector2.h  vector3.h  vector4.h
framework/memory/: CMakeLists.txt  aligned_allocator.h  aligned_allocator.inl  defines.h  frame_allocator.h  frame_allocator.inl  helpers.cc  helpers.h  memory_manager.cc  memory_manager.h  memory_tag.h  memory_tag.inl  memory_tag_value.h  memory_tracker.cc  memory_tracker.h  operators.cc  operators.h  operators.inl
framework/memory/ut/: CMakeLists.txt  memory_ut.cc
framework/render/: CMakeLists.txt  api.h  camera_eul.cc  camera_eul.h  colors.h  debug.h  debug_draw.cc  debug_draw.h  defines.h  input_layout.h  input_layout.inl  pixel_shader.h  rasterizer_desc.h  render_stage.h  renderer.h  resource.h  sampler_state.h  shader.h  shader.inl  shader_compiler.h  shader_compiler.inl  texture.cc  texture.h  texture.inl  texture_desc.h  uniform_buffer.h  uniform_buffer.inl  vertex_shader.h  viewport_desc.h
framework/render/desc/: input_layout_desc.h  rasterizer_desc.h  sampler_desc.h  scissor_desc.h  texture_desc.h
framework/render/dx11/: dx_debug_context.cc  dx_debug_context.h  dx_defines.h  dx_material.cc  dx_material.h  dx_mesh.cc  dx_mesh.h  dx_object.cc  dx_object.h  dx_pixel_shader.cc  dx_pixel_shader.h  dx_renderer.cc  dx_renderer.h  dx_shader_loader.cc  dx_shader_loader.h  dx_texture.cc  dx_texture.h  dx_uniform.h  dx_uniform.inl  dx_utils.cc  dx_utils.h  dx_vertex_shader.cc  dx_vertex_shader.h
framework/render/ogl/: gl_debug_draw.cc  gl_debug_draw.h  gl_mesh.cc  gl_mesh.h  gl_pointers.cc  gl_pointers.h  gl_renderer.h  gl_shader.cc  gl_shader.h  gl_texture.cc  gl_texture.h  gl_utils.cc  gl_utils.h
framework/render/vk/: vk_barrier.cc  vk_barrier.h  vk_blend_state.cc  vk_blend_state.h  vk_buffer.cc  vk_buffer.h  vk_buffer.inl  vk_buffer_barrier.cc  vk_buffer_barrier.h  vk_command_list.cc  vk_command_list.h  vk_debug_interface.cc  vk_debug_interface.h  vk_debug_interface.inl  vk_defines.h  vk_deleter.h  vk_descriptor_set.cc  vk_descriptor_set.h  vk_descriptor_set.inl  vk_device.cc  vk_device.h  vk_device_allocator.cc  vk_device_allocator.h  vk_device_allocator.inl  vk_fence.cc  vk_fence.h  vk_framebuffer.cc  vk_framebuffer.h  vk_host_allocator.cc  vk_host_allocator.h  vk_image.cc  vk_image.h  vk_image_barrier.cc  vk_image_barrier.h  vk_image_view.cc  vk_image_view.h  vk_physical_device.cc  vk_physical_device.h  vk_pipeline.cc  vk_pipeline.h  (+12 more)
framework/system/: CMakeLists.txt  array_utils.h  array_utils.inl  assert_utils.h  assert_utils.inl  bits_utils.h  bits_utils.inl  debugging.cc  debugging.h  diff_utils.h  diff_utils.inl  error_utils.h  error_utils.inl  event_point.h  font.cc  font.h  fps_counter.cc  fps_counter.h  hash_utils.h  hash_utils.inl  introspection.h  introspection.inl  literals.h  logger.cc  logger.h  logger.inl  mesh_utils.cc  mesh_utils.h  profiler.h  rand_utils.h  rand_utils.inl  rtti.h  rtti.inl  scoped_timer.h  string_utils.cc  string_utils.h  string_utils.inl  timer.cc  timer.h  type_id.cc  (+6 more)
framework/system/ut/: CMakeLists.txt  font.cc  hash.cc  introspection.cc  range.cc  strings.cc  system_ut.cc  templates.cc  types.cc
framework/threads/: .todo  CMakeLists.txt  fence.cc  fence.h  job_manager.cc  job_manager.h  job_queue.cc  job_queue.h  mt_utils.h  mt_utils.inl  scoped_locks.h  semaphore.cc  semaphore.h  spin_lock.cc  spin_lock.h  thread.cc  thread.h  thread.inl
framework/threads/win/: critical_section.cc  critical_section.h
framework/window/: CMakeLists.txt  debug_widget.cc  debug_widget.h  main_input.h  main_window.h
framework/window/linux/: aliases.h  enums.h  exceptions.h  helpers.cc  helpers.h  main_window.cc  main_window.h  x_window.cc  x_window.h
framework/window/win/: dx_input.cc  dx_input.h  main_window.cc  main_window.h
playground/vulkan/: CMakeLists.txt  app_defines.h  app_gui.cc  app_gui.h  app_helpers.cc  app_helpers.h  app_input.cc  app_input.h  app_renderer.cc  app_renderer.h  app_scene.cc  app_scene.h  main.cc
playground/vulkan/logic/: spatial.cfg.cc  tennis.cfg.cc
playground/vulkan/scene/: scene.cc  (+25 more)
(+280 files in other folders)
